manifests/prod/pyroscope/Namespace-pyroscope.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: pyroscope
