manifests/prod/pyroscope/EndpointSlice-pyroscope.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: pyroscope
  name: pyroscope
  namespace: pyroscope
ports:
  - name: http
    port: 4040
    protocol: TCP
