manifests/prod/pyroscope/Service-pyroscope.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
  namespace: pyroscope
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4040
  type: ClusterIP
