manifests/prod/pyroscope/Ingress-pyroscope.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: Continuous profiling
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: mdi-fire
    gethomepage.dev/name: pyroscope
    gethomepage.dev/siteMonitor: http://pyroscope.pyroscope.svc.cluster.local/ready
  name: pyroscope
  namespace: pyroscope
spec:
  ingressClassName: traefik
  rules:
    - host: pyroscope.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: pyroscope
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pyroscope.k3s.lan
      secretName: pyroscope-tls
